name:
  "coq-caml5"
synopsis:
  "The Coq development of caml5"
opam-version:
  "2.0"
maintainer:
  "clement.allain@inria.fr"
authors: [
  "Clément Allain"
  "François Pottier"
]
homepage:
  "https://github.com/clef-men/caml5"
bug-reports:
  "https://github.com/clef-men/caml5/issues"
depends: [
  "coq" {>= "8.17.0"}
  "coq-stdpp" {>= "1.8.0"}
  "coq-iris" {>= "4.0.0"}
  "coq-iris-heap-lang" {>= "4.0.0"}
]
build: [
  make "-j%{jobs}%"
]
